IMPROVE: Ordering and add image for overview

--- a/03_QueryLanguage.tex
+++ b/03_QueryLanguage.tex
@@ -1,5 +1,11 @@
 %! TEX root = ./main.tex
 
+\section{Algebras}
+\begin{itemize}
+    \item Overview \\
+    \includegraphics[width=0.8\textwidth]{./Figures/algebraOverview.png}
+\end{itemize}
+
 \section{Relational Algebra}
 \begin{itemize}
     \item Imperative
@@ -12,7 +18,7 @@
             \item Create a new relation $R'$ from one or two given relations $R_1, R_2$
             \ides{Union $\cup$:} 
                 \begin{itemize}
-                    \item $x \in R_1 \cup R_2 \iff x \in R_1 \lor R_2$
+                    \item $x \in R_1 \cup R_2 \iff x \in R_1 \lor x \in R_2$
                     \item Schema of both operands must match
                 \end{itemize}
             \ides{Difference $-$:} 
@@ -54,27 +60,39 @@
                                 \ides{All attributes shared:} Equivalent to intersect
                             \end{itemize}
                     \item Is associative
-                    \item Other flavours
-                        \begin{itemize}
-                            \ides{Left Outer Join:} Natural join $\bigcup$ unmatched tuples from left operand
-                            \ides{Right Outer Join:} Natural join $\bigcup$ unmatched tuples from right operand
-                            \ides{Full Outer Join:} Natural join $\bigcup$ unmatched tuples from left and right operand
-                            \ides{Left Semi Join:} Tuples from left operand which match with any tuples from right operand
-                                \begin{itemize}
-                                    \item $R_1(A_1, \dots, A_n) xxx_C R_2(B_1, \dots, B_2) = \Pi_{A_1, \dots, A_n}(R_1 \bowtie_C R_2$
-                                \end{itemize}
-                            \ides{Right Semi Join:} Tuples from right operand which match with any tuples from left operand
-
-                            \todo{Correct join symbols}
-                        \end{itemize}
                 \end{itemize}
             \ides{Theta Join $\bowtie_\theta$:}
                 \begin{itemize}
                     \item $R_1 \bowtie_\theta R_2 = \sigma_\theta (R_1 \times R_2)$
+                        \begin{itemize}
+                            \item $\theta$ can be any kind of condition
+                        \end{itemize}
                     \item Flavour
                         \begin{itemize}
                             \ides{Equi-Join:} $R_1 \bowtie_{A=B} R_2 = \sigma_{A=B} (R_1 \times R_2)$
                         \end{itemize}
+                \end{itemize}
+            \ides{Inner Join:}
+                \begin{itemize}
+                    \item Very similar to theta join with the difference that it keeps all matched columns
+                        \begin{itemize}
+                            \item I.e. matching columns are not collapsed into a single one
+                        \end{itemize}
+                \end{itemize}
+            \ides{Outer Join:}
+                \begin{itemize}
+                    \ides{Left Outer Join ${\tiny \textifsym{d|><|}}$:} Natural join $\bigcup$ unmatched tuples from left operand
+                    \ides{Right Outer Join ${\tiny \textifsym{|><|d}}$:} Natural join $\bigcup$ unmatched tuples from right operand
+                    \ides{Full Outer Join ${\tiny \textifsym{d|><|d}}$:} Natural join $\bigcup$ unmatched tuples from left and right operand
+                    \item Unmatched tuples from the left/right are extended with \verb+NULL+ in the columns which do not match
+                \end{itemize}
+            \ides{Semi Join:}
+                \begin{itemize}
+                    \ides{Left Semi Join $\ltimes$:} Tuples from left operand which match with any tuples from right operand
+                        \begin{itemize}
+                            \item $R_1(A_1, \dots, A_n) \ltimes R_2(B_1, \dots, B_2) = \Pi_{A_1, \dots, A_n}(R_1 \bowtie R_2)$
+                        \end{itemize}
+                    \ides{Right Semi Join $\rtimes$:} Tuples from right operand which match with any tuples from left operand
                 \end{itemize}
             \ides{Relational Division $\div$:}
                 \begin{itemize}
@@ -121,15 +139,19 @@
         \end{itemize}
     \ides{Query $Q_\phi$:} Has the form $Q_\phi = \{(x_1, \dots, x_k) \mid \phi\}$
         \begin{itemize}
-            \ides{$\mathbf{\phi}$:} First order formula (predicate) with free variables $x_1, \dots, x_k$ \todo{Is this correct?}
+            \ides{$\mathbf{\phi}$:} First order formula (predicate) with free variables $x_1, \dots, x_k$
         \end{itemize} \todo{Full mathematical definition}
     \item Output of queries may be infinite
     \ides{Safe:} Query $Q_\phi$ which is finite for all $\mathcal{I}$
         \begin{itemize}
-            \item I.e. Result must be subset of the domain of the formula
-            \item Undecidable problem
+            \item Undecidable problem if query is safe
         \end{itemize}
     \ides{Domain Independent Relational Calculus:} Query whose result does not depend on the interpretation of the relation and not on the domain
     \ides{Active Domain:} $\text{adom}(Q_\phi, \mathcal{I}) = \text{all constaints in } Q_\phi \text{ and } \mathcal{I}$
+    \ides{Conjunctive Query:} $\phi = \exists y_1, \dots, y_l (A_1 \wedge \dots \wedge A_m), Q_\phi = \{(x_1, \dots, x_n) \mid \phi \}, A_j$ is an atom
+        \begin{itemize}
+            \item Has many good properties
+        \end{itemize}
+    \ides{SPJR Algebra:} Relational algebra with only select, project, join and rename operators
 \end{itemize}
 
