--- a/main.tex
+++ b/main.tex
@@ -3,10 +3,15 @@
 \usepackage{summary}
 \usepackage{math}
 
+% Relational Algebra symbols
+\usepackage{amssymb}
+\usepackage{ifsym}
+
 \begin{document}
 
     \lhead{DMDB}
     \rhead{\leftmark}
+
 
     \title{Data Management and Databases}
     \subtitle{Spring 2021}
